SERVER-124323 Erase stale pointers from dsToStageId (#52031)

GitOrigin-RevId: d2497c52b2e385b9f114ec8754eb31d17ff88ccd